@@ -2,8 +2,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>co.com.bdb.automation</groupId>
-    <artifactId>template-e2e-serenity</artifactId>
+    <groupId>org.plantilla.serenity.screenplay</groupId>
+    <artifactId>untitled</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <name>template-serenity-screenplay-maven-chrome</name>
@@ -18,8 +18,8 @@
         <maven.compiler.source>22</maven.compiler.source>
         <maven.compiler.target>22</maven.compiler.target>
         <enable.preview>true</enable.preview>
-        <maven.surefire.plugin.version>3.2.1</maven.surefire.plugin.version>
-        <maven.failsafe.plugin.version>3.2.1</maven.failsafe.plugin.version>
+        <maven.surefire.plugin.version>3.0.0-M9</maven.surefire.plugin.version>
+        <maven.failsafe.plugin.version>3.0.0-M9</maven.failsafe.plugin.version>
     </properties>
 
     <dependencies>
@@ -31,7 +31,7 @@
         </dependency>
         <dependency>
             <groupId>net.serenity-bdd</groupId>
-            <artifactId>serenity-junit5</artifactId>
+            <artifactId>serenity-junit</artifactId>
             <version>${serenity.version}</version>
         </dependency>
         <dependency>
@@ -57,10 +57,13 @@
         </dependency>
         <!-- JUNIT dependencies -->
         <dependency>
-            <groupId>org.junit.platform</groupId>
-            <artifactId>junit-platform-suite</artifactId>
-            <version>${junit.platform.version}</version>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.1</version>
+            <scope>test</scope>
         </dependency>
+
+
         <!-- Others dependencies -->
         <dependency>
             <groupId>ch.qos.logback</groupId>
@@ -68,9 +71,9 @@
             <version>1.2.11</version>
         </dependency>
         <dependency>
-          <groupId>com.browserstack</groupId>
-          <artifactId>browserstack-java-sdk</artifactId>
-          <version>1.21.0</version>
+            <groupId>com.browserstack</groupId>
+            <artifactId>browserstack-java-sdk</artifactId>
+            <version>1.21.0</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
@@ -79,40 +82,38 @@
             <artifactId>webdrivermanager</artifactId>
             <version>5.9.2</version>
         </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.13.1</version>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
 
     <build>
         <plugins>
             <plugin>
+                <!-- Plugin para tests unitarios -->
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven.surefire.plugin.version}</version>
                 <configuration>
-                    <argLine>--enable-preview</argLine>
-                    <skip>true</skip>
+                    <includes>
+                        <include>**/CucumberTestSuiteTest.java</include>
+                    </includes>
+                    <systemPropertyVariables>
+                        <!--suppress UnresolvedMavenProperty -->
+                        <webdriver.base.url>${webdriver.base.url}</webdriver.base.url>
+                    </systemPropertyVariables>
                 </configuration>
             </plugin>
+            <!-- Plugin para tests de integración (Serenity suele usar este) -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>${maven.failsafe.plugin.version}</version>
                 <configuration>
                     <includes>
-                        <include>**/*.java</include>
+                        <include>**/CucumberTestSuiteTest.java</include>
                     </includes>
-                    <reuseForks>true</reuseForks>
                     <!--suppress UnresolvedMavenProperty -->
                     <argLine>
                         -javaagent:${com.browserstack:browserstack-java-sdk:jar}
                     </argLine>
-                    <parallel>methods</parallel>
-                    <useUnlimitedThreads>true</useUnlimitedThreads>
                 </configuration>
                 <executions>
                     <execution>
@@ -164,14 +165,14 @@
                 <artifactId>maven-dependency-plugin</artifactId>
                 <version>3.3.0</version>
                 <executions>
-                  <execution>
-                    <id>getClasspathFilenames</id>
-                    <goals>
-                      <goal>properties</goal>
-                    </goals>
-                  </execution>
+                    <execution>
+                        <id>getClasspathFilenames</id>
+                        <goals>
+                            <goal>properties</goal>
+                        </goals>
+                    </execution>
                 </executions>
-              </plugin>
+            </plugin>
         </plugins>
     </build>
 </project>
